vendored_parsers/tree-sitter-comment/test/corpus/source.txt
================================================================================
Simple tags
================================================================================

TODO: something

XXX: fix something else.

TODO:    extra white spaces.

NOTAG:missing space

(TODO: I'm inside parentheses)

NOTE:

"NOTE: this should work!"

DEBUG: thís shoúld wórk with $weird$ symbols

--------------------------------------------------------------------------------

(source
  (tag
    (name))
  (tag
    (name))
  (tag
    (name))
  (tag
    (name))
  (tag
    (name))
  (tag
    (name))
  (tag
    (name)))

================================================================================
Decorated tags
================================================================================

TODO(stsewd): something

XXX (monday): fix something else.

TODO(@todo):    extra white spaces.

NOTAG(tag):missing space

(TODO (someone): I'm inside parentheses)

NOTE(a user):

"NOTE (a user): this should work!"

FIXME(): This isn't a valid tag (user is missing)

--------------------------------------------------------------------------------

(source
  (tag
    (name)
    (user))
  (tag
    (name)
    (user))
  (tag
    (name)
    (user))
  (tag
    (name)
    (user))
  (tag
    (name)
    (user))
  (tag
    (name)
    (user)))

================================================================================
URIS
================================================================================

TODO: http://example.com

TODO: https://example.com

Something "http://example.com"

URI: https://user:pass@example.com/org/repo/?foo=baz

(https://example.com/foo/bar/)

URI(me): (https://github.com/stsewd/?foo=bar#baz)

https://github.com/stsewd/tree-sitter-rst#1.1

--------------------------------------------------------------------------------

(source
  (tag
    (name))
  (uri)
  (tag
    (name))
  (uri)
  (uri)
  (tag
    (name))
  (uri)
  (uri)
  (tag
    (name)
    (user))
  (uri)
  (uri))
